apps/blinko/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: blinko
  namespace: blinko
spec:
  selector:
    app.kubernetes.io/name: blinko
  ports:
    - name: http
      port: 80
      targetPort: 1111
